<resources>
    <string name="app_name">WhereGo</string>
    <string name="facebook_app_id">2476292149355634</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">5ca3d88cbaa7b4a92d2da4846d3bed74</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="confirmation">Confirmation</string>
    <string name="do_you_want_exit">Do you really want to exit WhereGo?</string>
    <string name="channnel_id">whereGo123456</string>
    <string name="sample_mail_id">name@examplecom</string>
    <string name="i_forgot_my_password">Forgot?</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="mobile_no">Mobile no</string>
    <string name="password_txt">******</string>
    <string name="recover_password">Enter your mail ID for recovery</string>
    <string name="enter_the_coupon">Enter the coupon code</string>
    <string name="add_coupon">ADD COUPON</string>
    <string name="update_success">Profile Updated</string>
    <string name="where_to_go">Where to?</string>
    <string name="selected_payment_mode">Cash</string>
    <string name="change">Payment method</string>
    <string name="change_new">Cash</string>
    <string name="request_xuber">Deliver Now</string>
    <string name="schedule">Schedule Later</string>
    <string name="sample_date">Choose a date</string>
    <string name="sample_time">Choose a time</string>
    <string name="next">Schedule Request</string>
    <string name="different_time">You can\'t schedule in past timings, please choose different time</string>
    <string name="choose_date_time">Please choose date and time for schedule</string>
    <string name="no_service">No Services found</string>
    <string name="eta_time">ETA</string>
    <string name="done">Done</string>
    <string name="looking_for_ride">Finding &provider;</string>
    <string name="cancel_ride">Cancel &service;</string>
    <string name="share">Share</string>
    <string name="cancel_ride_alert">Are you sure you want to cancel the &service;?</string>
    <string name="no_drivers_found">No drivers available to take your Order</string>
    <string name="driver_busy">Your Order was cancelled by the driver.Please contact us for support</string>
    <string name="sample_name">Will Smith</string>
    <string name="sample_service">BMW</string>
    <string name="call_btn">Call</string>
    <string name="cancel_trip">Cancel</string>
    <string name="surge_pricing">Due to peak hours, charges will be vary based on availability of providers</string>
    <string name="payment">Payment</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="add_payments">Add Card for payments</string>
    <string name="add">Add Card</string>
    <string name="enter_card_details">Card details not valid</string>
    <string name="are_you_sure">Are you sure you want to remove?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="arrived">&Provider; has arrived at your location</string>
    <string name="picked_up">Order in the way</string>
    <string name="history">History</string>
    <string name="comments">Comments</string>
    <string name="no_trips">You have no past orders</string>
    <string name="your_trips">Your Orders</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="invoice">Invoice</string>
    <string name="base_price">Base fare</string>
    <string name="booking_id">Booking ID</string>
    <string name="sample_base_price">$10000</string>
    <string name="extra_price">Extra</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="pay_now">Pay Now</string>
    <string name="distance_price">Distance fare</string>
    <string name="rate_provider">Rate your order with</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="submit">Submit</string>
    <string name="source_location">Your location</string>
    <string name="connect_to_network">Connect to network or quit</string>
    <string name="cencel_request">Are you sure you want to cancel the &service;?</string>
    <string name="connect_to_wifi">Connect to WIFI</string>
    <string name="quit">Quit</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="something_went_wrong_net">Something went wrong, Please check internet connection</string>
    <string name="oops_connect_your_internet">Oops ! Connect your Internet</string>
    <string name="server_down">Unable to reach server</string>
    <string name="please_try_again">Please try again</string>
    <string name="email_validation">Enter your email ID</string>
    <string name="not_valid_email">Not a valid email ID</string>
    <string name="password_validation">Password could not be left empty</string>
    <string name="first_name_empty">First name required</string>
    <string name="mobile_number_empty">Mobile number required</string>
    <string name="mobile_number_validation">Mobile number must have numbers between 10 to 20 digits</string>
    <string name="True">true</string>
    <string name="False">false</string>
    <string name="not_vaild_coupon">Coupon is not valid or may expired</string>
    <string name="coupon_added">Coupon applied successfully</string>
    <string name="add_coupon_txt">Add Coupon</string>
    <string name="added_coupon">Coupon\'s applied by you</string>
    <string name="already_in_use_coupon">Coupon already used by you</string>
    <string name="expired_coupon">Sorry, coupon has expired</string>
    <string name="off">OFF</string>
    <string name="the_applied_coupon">The coupon code applied is</string>
    <string name="valid_until">Valid until</string>
    <string name="wallet_balance">Your wallet amount is</string>
    <string name="change_password_title">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="please_enter_current_pass">Please enter current password</string>
    <string name="please_enter_new_pass">Please enter new password</string>
    <string name="please_enter_confirm_pass">Please enter confirmation password</string>
    <string name="different_passwords">Password doesn\'t match</string>
    <string name="commision">Service charge</string>
    <string name="request_cancel">You have cancelled the request</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string name="valid_image">No image found</string>
    <string name="confirm_password_validation">Password mismatch</string>
    <string name="reset_password">Reset Password</string>
    <string name="note">Note : Please enter the OTP sent to your registered email</string>
    <string name="secrete_code">Enter OTP</string>
    <string name="enter_mobile_no">Enter Mobile number</string>
    <string name="logout_alert">Are you sure you want to logout?</string>
    <string name="no_comments">No comment available</string>
    <string name="pin_location">Set pin location</string>
    <string name="emaergeny_call">Are you sure you want to proceed with Emergency call?</string>
    <string name="user_no_mobile">No mobile number</string>
    <string name="profile">Profile</string>
    <string name="reason_to_cancel">Reason for cancellation</string>
    <string name="surge_pricing_title">Due to high demand price may vary</string>
    <string name="help">Help</string>
    <string name="book_name">Booking ID</string>
    <string name="password_size">Password size must be atleast 6</string>
    <string name="sorry_for_inconvinent">Sorry for inconvenient,Our assisants are busy right now</string>
    <string name="email_exist">The email has already been taken</string>
    <string name="first_name_no_number">First name do not accept numbers</string>
    <string name="use_wallet_amount">Use wallet amount</string>
    <string name="arriving">&Provider; accepted your request.</string>
    <string name="view_invoice">View receipt</string>
    <string name="no_internet_connection">Not able to connect. Please, check your internet connectivity.</string>
    <string name="Camera">Camera</string>
    <string name="IMG">IMG_</string>
    <string name="PNG">.png</string>
    <string name="choose_image">Choose Image :</string>
    <string name="Gallery">Gallery</string>
    <string name="camera_error_permission">You have denied camera access permission.</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter  Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="update_mobile">Update Mobile No</string>
    <string name="update_email">Update Account Email</string>
    <string name="update_name">Update Name</string>
    <string name="update">UPDATE</string>
    <string name="address">Address</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_home_address">Enter Home Address</string>
    <string name="enter_work_address">Enter Work Address</string>
    <string name="mobile_number">Mobile number</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="version">v %s</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="pickup_location">Pickup Address</string>
    <string name="destination_location">Drop Address</string>
    <string name="action_coupon">Coupon</string>
    <string name="action_wallet">&appName; Wallet</string>
    <string name="add_money">Add Money</string>
    <string name="copyright">Copyright</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_page">It is a long established fact that a reader will be distracted by
        the readable content of a page when looking at its layout. The point of using Lorem Ipsum
        is that it has a more-or-less normal distribution of letters, as opposed to using
        Various versions have evolved over the years, sometimes by accident,
        sometimes on purpose (injected humour and the like).</string>
    <string name="have_a_referral_code">Have a referral code?</string>
    <string name="login">Login</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="enter_your_otp_code_here">Enter your OTP code here</string>
    <string name="referral_code_is_not_apply">Referral code is not empty</string>
    <string name="referral_code">Referral code</string>
    <string name="enter_referral_code">Enter Referral code</string>
    <string name="share_greet">I\'m giving you a free ride on the &appName; app (up to 25 percent). To confirm, use code</string>
    <string name="share_signup">to sign up. Enjoy! Details:</string>
    <string name="send_your_friends_n_refer_and_earn">Send your friends   refer and earn</string>
    <string name="share_the_app_love_and_give_friends_free_rides_to_try_app_worth_up_to_25_percent_each">Share the app love and give friends free rides to try app, worth up to 25 percent each!</string>
    <string name="share_your_invite_code">Share your invite code</string>
    <string name="what_are_moving_for_u" translatable="false">Let us deliver it for you</string>
</resources>