<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".Activities.LocationAndGoodsActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/text_color_white"
        android:elevation="@dimen/_10sdp">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:layout_marginLeft="@dimen/_5sdp"
            android:padding="5dp"
            android:tint="@color/black"
            android:src="@drawable/back_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/what_are_moving_for_u"
            android:textColor="@color/black_text_color"
            android:textSize="18sp" />

    </LinearLayout>




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/submit_btn"
        tools:itemCount="1"
        android:layout_below="@+id/toolbar"
        tools:listitem="@layout/locations_list_item"
        android:layout_marginTop="@dimen/_5sdp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:src="@drawable/ic_add" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/colorAccent"
        android:padding="@dimen/_10sdp"
        android:text="@string/submit"
        android:textColor="@android:color/white" />

</RelativeLayout>
