<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <FrameLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginBottom="@dimen/_minus25sdp"
        android:background="@drawable/loginbg">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_124sdp"
                android:layout_height="@dimen/_110sdp"

                android:src="@drawable/appicon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot Password?"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/white"
    />
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_12sdp"
        android:background="@drawable/bottom_dialog_shape">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_25sdp"
            android:paddingEnd="@dimen/_25sdp"
            android:paddingTop="@dimen/_5sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.wherego.user.Utils.MyTextView
                    android:id="@+id/title_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"

                    android:text="@string/recover_password"
                    android:textSize="@dimen/_13sdp" />

                <com.wherego.user.Utils.MyEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/email"
                    android:padding="@dimen/_10sdp"
                    android:textColorHint="@color/textColor"
                    android:textColor="@color/textColor"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/red_color_rect_shape"
                    android:maxLines="1" />

                <com.wherego.user.Utils.MyEditText
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint=""
                    android:inputType="number"
                    android:maxLines="1"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/otp_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:ignore="RtlHardcoded">

                    <com.wherego.user.Utils.MyEditText
                        android:id="@+id/otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/secrete_code"
                        android:inputType="numberPassword"
                        android:textColorHint="@color/textColor"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:ignore="RtlHardcoded">

                    <com.wherego.user.Utils.MyEditText
                        android:id="@+id/mobile_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/textColor"
                        android:textColor="@color/textColor"
                        android:hint="@string/enter_mobile_no"
                        android:inputType="number"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/new_password_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:ignore="RtlHardcoded">

                    <com.wherego.user.Utils.MyEditText
                        android:id="@+id/new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColor"
                        android:hint="@string/new_password"
                        android:inputType="textWebPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirm_password_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:ignore="RtlHardcoded">

                    <EditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/textColor"
                        android:textColor="@color/textColor"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/note"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/ll_resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Click"
                        android:textColor="@color/white" />

                    <com.wherego.user.Utils.MyButton
                        android:id="@+id/resend"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:backgroundTint="@color/colorButton"
                        android:background="@drawable/red_color_rect_shape"
                        android:padding="5dp"
                        android:text="Send"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="If you have not received OTP"
                        />
                </LinearLayout>

            </LinearLayout>
            <Button
                android:id="@+id/nextIcon"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:background="@drawable/red_color_rect_shape"
                android:backgroundTint="@color/colorButton"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:textColor="@color/white"

                android:textSize="@dimen/_14sdp"
                android:text="Next"/>

            <View
                android:layout_width="@dimen/_124sdp"
                android:layout_height="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/home_button"/>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
