<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="@dimen/_10sdp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/backArrow"
            android:src="@drawable/back_icon"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_32sdp"

            android:padding="@dimen/_2sdp"/>

        <com.wherego.user.Utils.MyTextView
            android:text="@string/change_password_title"
            android:gravity="center_vertical"
            android:textSize="@dimen/_16sdp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:orientation="vertical">

                <com.wherego.user.Utils.MyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/current_password"/>
                <com.wherego.user.Utils.MyEditText
                    android:id="@+id/current_password"
                    android:inputType="textWebPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@android:color/black"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:orientation="vertical">

                <com.wherego.user.Utils.MyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/new_password"/>
                <com.wherego.user.Utils.MyEditText
                    android:id="@+id/new_password"
                    android:inputType="textWebPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@android:color/black"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:orientation="vertical">

                <com.wherego.user.Utils.MyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/confirm_password"/>
                <com.wherego.user.Utils.MyEditText
                    android:id="@+id/confirm_password"
                    android:inputType="textWebPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@android:color/black"
                    android:imeOptions="actionDone"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:maxLines="1" />
            </LinearLayout>


            <com.wherego.user.Utils.MyButton
                android:id="@+id/changePasswordBtn"
                android:text="@string/change_password_title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_20sdp"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>